--- a/package.json
+++ b/package.json
@@ -1,36 +1,37 @@
 {
-  "name": "bootstrap",
-  "version": "1.0.0",
-  "description": "bootstrap layout",
-  "main": "index.js",
-  "scripts": {
-    "start": "webpack serve --mode development",
-    "build": "webpack serve --mode production"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/icodetree/bootstrap.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/icodetree/bootstrap/issues"
-  },
-  "homepage": "https://github.com/icodetree/bootstrap#readme",
-  "dependencies": {
-    "@popperjs/core": "^2.11.6",
-    "bootstrap": "^5.2.2"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.13",
-    "css-loader": "^6.7.1",
-    "postcss-loader": "^7.0.1",
-    "sass": "^1.56.1",
-    "sass-loader": "^13.2.0",
-    "style-loader": "^3.3.1",
-    "webpack": "^5.75.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.11.1"
-  }
+    "name": "bootstrap",
+    "version": "1.0.0",
+    "description": "bootstrap layout",
+    "main": "index.js",
+    "scripts": {
+        "start": "webpack serve --mode development",
+        "build": "webpack --mode production"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/icodetree/bootstrap.git"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/icodetree/bootstrap/issues"
+    },
+    "homepage": "https://github.com/icodetree/bootstrap#readme",
+    "dependencies": {
+        "@popperjs/core": "^2.11.6",
+        "bootstrap": "^5.2.2"
+    },
+    "devDependencies": {
+        "autoprefixer": "^10.4.13",
+        "css-loader": "^6.7.1",
+        "mini-css-extract-plugin": "^2.6.1",
+        "postcss-loader": "^7.0.1",
+        "sass": "^1.56.1",
+        "sass-loader": "^13.2.0",
+        "style-loader": "^3.3.1",
+        "webpack": "^5.75.0",
+        "webpack-cli": "^4.10.0",
+        "webpack-dev-server": "^4.11.1"
+    }
 }
