--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "homepage": "https://github.com/icodetree/bootstrap#readme",
     "dependencies": {
         "@popperjs/core": "^2.11.6",
-        "bootstrap": "^5.2.2"
+        "bootstrap": "^5.2.2",
+        "swiper": "^8.4.4"
     },
     "devDependencies": {
         "autoprefixer": "^10.4.13",
